# nano-vm-port

./: .gitignore  CMakeLists.txt  README.md
Project Documentation and Source Files-20201118/: SOEN422_F2020 Project doc6 - AUnit_v1.0.9e.c
Project Documentation and Source Files-20201118/src/: _xtoa.c  main
Project Documentation and Source Files-20201118/vmPortingExamplesOnNano/: testHalCout.bat
example/: bsl_COut.c  testVMOperandStack.bat
examples/task_0/: READ_ME.txt  unit_tester.c
examples/task_3/: testBslXtoa.bat
src/: Makefile  _cout.c  _stdtype.h  admin.c  ioreg.c  ioreg.h  vm.c  vm.h  vmstack.c  vmstack.h
src/BSL/: _cout.c  _stdtype.h  _xtoa.c
tasks/task_0/: Makefile  aunit.c  task_0_runner.sh  unit_tester  unit_tester.txt
tasks/task_1/: nano_vm_port  task_1_runner.sh
tasks/task_3/: task_3_BSLout.sh  task_3_runner.sh  task_3_runner_1.sh  task_3_runner_2.sh  tout.c  tvmstack.c
tasks/task_4/: admin.c  task_4_runner.sh
tasks/task_5/: SerialLoader.cs  bsl_Uart.c  bsl_Uart.h  hal_Loader.c  hal_Loader.h  hal_TestLoader.c  task_5_runner.sh
tasks/task_6/: bsl_interman.c  bsl_interman.h  hal_TestInterman0.c  hal_interman.c  hal_interman.h  task_6_runner.sh  testInterman0.bat
tasks/task_7/: bsl_IOReg.c  bsl_IOReg.h  bsl_IOReg111.h  bsl_TestIOReg0.c  task_7_runner.sh
tests/: SOEN422_F2020 Project doc6 - AUnit_v1.0.9e.c  aunit  testRunner.sh
